========================
0.0.90
========================

- improved `edit` source-code functionality
	- improved schema by adding `nocompress {Boolean}` field
- fixed blacklist for localization in remote editing
- added `flow.cloning {Boolean}` for cloning of message data (default: `true`)
- added missing `headers` argument in the `res.jsonstring(data, [headers])` method

========================
0.0.89
========================

- extended HTTP server by adding `gzip` and `deflate` content-encoding
- updated `options` by adding `options.compress = 'gzip|deflate'` option in the `REQUEST()` method
- fixed handling values in `QueryBuilder`
- extended command-line tool by adding new command `total4 --extract <filename.bundle>`
- improved CMS compiler by adding support for inline navigation and breadcrumb
- added `CONF.logger` that enables the writing of `console` into the `/logs/debug.log` file
- fixed `encryption` in actions
- added new option `allow_check_upload` for disabling upload content-type checks
- added `$.cancel()` method in the `AUTH()` delegate

========================
0.0.88
========================

- added `API.file(filename, path, [formkey])`
- added `PATH.plugins(path)` method
- added a new event `ON('componentator', function(meta))`
- fixed `FileStorage.readbase64()`
- fixed a file validation for encrypted word/excel files
- updated Tangular template engine
- added a new global keyword `PLUGINS`
- added `U.groupify(id, [count])` method for grouping identifiers
- fixed data validation for the schema actions
- added `DatabaseBuilder.array(name, [comparer], value)` by [Gera](https://github.com/Gera-IC)
- added FlowStream events:
	- `flowstream.on('connect', function(instance))`
	- `flowstream.on('disconnect', function(instance))`
	- `flowstream.on('configure', function(instance))`

========================
0.0.87
========================

- added `charset=utf-8` to the JSON content-type in the `REQUEST()` method
- added `default_tapi` config key