@@ -1345,27 +1345,21 @@ exports.extend = function(target, source, rewrite) {
 };
 
 exports.extend_headers = function(first, second) {
-	var keys = Object.keys(first);
+
 	var headers = {};
 
-	var i = keys.length;
-	while (i--)
-		headers[keys[i]] = first[keys[i]];
+	for (let key in first)
+		headers[key] = first[key];
 
-	keys = Object.keys(second);
-	i = keys.length;
-
-	while (i--)
-		headers[keys[i]] = second[keys[i]];
+	for (let key in second)
+		headers[key] = second[key];
 
 	return headers;
 };
 
 exports.extend_headers2 = function(first, second) {
-	var keys = Object.keys(second);
-	var i = keys.length;
-	while (i--)
-		first[keys[i]] = second[keys[i]];
+	for (let key in second)
+		first[key] = second[key];
 	return first;
 };
 
